Add FBXFile skeleton, move ABENCH_INLINE def to Common.hpp
Tests were added to Linux build. FBXFile tests still could fail due
to incorrect CWD - needs fixing with the addition of FileSystem module.

--- a/ABench/ABench.vcxproj
+++ b/ABench/ABench.vcxproj
@@ -173,6 +173,7 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Common\FBXFile.cpp" />
     <ClCompile Include="Common\Win\Common.cpp" />
     <ClCompile Include="Common\Win\Library.cpp" />
     <ClCompile Include="Common\Win\Logger.cpp" />
@@ -315,6 +316,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Common\FBXFile.hpp" />
     <ClInclude Include="Common\Library.hpp" />
     <ClInclude Include="Common\Logger.hpp" />
     <ClInclude Include="Common\Common.hpp" />
