--- a/ABench/CMakeLists.txt
+++ b/ABench/CMakeLists.txt
@@ -15,8 +15,9 @@ FILE(GLOB ABENCH_COMMON_LINUX_HEADERS   Common/Linux/*.hpp)
 FILE(GLOB ABENCH_RENDERER_LINUX_SOURCES Renderer/Linux/*.cpp)
 FILE(GLOB ABENCH_RENDERER_LINUX_HEADERS Renderer/Linux/*.hpp)
 
-INCLUDE_DIRECTORIES(${ABENCH_ROOT_DIRECTORY} ${ABENCH_DIRECTORY} ${ABENCH_DEPS_DIRECTORY})
-LINK_DIRECTORIES(${ABENCH_LIB_DIRECTORY})
+INCLUDE_DIRECTORIES(${ABENCH_ROOT_DIRECTORY} ${ABENCH_DIRECTORY} ${ABENCH_DEPS_DIRECTORY}
+                    ${ABENCH_DEPS_FBXSDK_INCLUDE_DIRECTORY})
+LINK_DIRECTORIES(${ABENCH_LIB_DIRECTORY} ${ABENCH_DEPS_FBXSDK_LIB_DIRECTORY})
 
 # To enable XCB-specific Vulkan extensions
 ADD_DEFINITIONS(-DVK_USE_PLATFORM_XCB_KHR -DVK_NO_PROTOTYPES)
@@ -32,7 +33,7 @@ ADD_EXECUTABLE(ABench
 
 # TODO uncomment when glslang will be added
 #TARGET_LINK_LIBRARIES(ABench glslang hlsl SPIRV OGLCompiler OSDependent)
-TARGET_LINK_LIBRARIES(ABench dl)
+TARGET_LINK_LIBRARIES(ABench dl fbxsdk)
 
 ADD_CUSTOM_COMMAND(TARGET ABench POST_BUILD COMMAND
                    ${CMAKE_COMMAND} -E copy $<TARGET_FILE:ABench> ${ABENCH_OUTPUT_DIRECTORY}/${targetfile})
