--- a/ABench/CMakeLists.txt
+++ b/ABench/CMakeLists.txt
@@ -15,8 +15,10 @@ FILE(GLOB ABENCH_COMMON_LINUX_HEADERS   Common/Linux/*.hpp)
 FILE(GLOB ABENCH_RENDERER_LINUX_SOURCES Renderer/Linux/*.cpp)
 FILE(GLOB ABENCH_RENDERER_LINUX_HEADERS Renderer/Linux/*.hpp)
 
-INCLUDE_DIRECTORIES(${ABENCH_ROOT_DIRECTORY} ${ABENCH_DIRECTORY} ${ABENCH_DEPS_DIRECTORY}
-                    ${ABENCH_DEPS_FBXSDK_INCLUDE_DIRECTORY})
+INCLUDE_DIRECTORIES(${ABENCH_ROOT_DIRECTORY} ${ABENCH_DIRECTORY}
+                    ${ABENCH_DEPS_FBXSDK_INCLUDE_DIRECTORY}
+                    ${ABENCH_DEPS_VULKAN_DIRECTORY}
+                   )
 LINK_DIRECTORIES(${ABENCH_LIB_DIRECTORY} ${ABENCH_DEPS_FBXSDK_LIB_DIRECTORY})
 
 # To enable XCB-specific Vulkan extensions
