--- a/ABenchTest/CMakeLists.txt
+++ b/ABenchTest/CMakeLists.txt
@@ -18,8 +18,9 @@ SET(ABENCHTEST_MODULES_HEADERS        ${ABENCH_DIRECTORY}/Common/FBXFile.hpp
                                       ${ABENCH_DIRECTORY}/Math/Vector.hpp
                                       )
 
-INCLUDE_DIRECTORIES(${ABENCH_ROOT_DIRECTORY} ${ABENCH_DEPS_DIRECTORY} ${ABENCHTEST_DIRECTORY} ${ABENCH_DIRECTORY}
-                    ${ABENCH_DEPS_FBXSDK_INCLUDE_DIRECTORY} ${ABENCH_GTEST_INCLUDE_DIRECTORY})
+INCLUDE_DIRECTORIES(${ABENCH_ROOT_DIRECTORY} ${ABENCHTEST_DIRECTORY} ${ABENCH_DIRECTORY}
+                    ${ABENCH_DEPS_FBXSDK_INCLUDE_DIRECTORY}
+                    ${ABENCH_DEPS_GTEST_INCLUDE_DIRECTORY})
 LINK_DIRECTORIES(${ABENCH_LIB_DIRECTORY} ${ABENCH_DEPS_FBXSDK_LIB_DIRECTORY})
 
 ADD_EXECUTABLE(ABenchTest
