--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,8 +36,13 @@ SET(ABENCH_OUTPUT_DIRECTORY ${ABENCH_ROOT_DIRECTORY}/Bin/${BUILD_PLATFORM}/${CMA
 SET(ABENCH_DIRECTORY ${ABENCH_ROOT_DIRECTORY}/ABench)
 SET(ABENCHTEST_DIRECTORY ${ABENCH_ROOT_DIRECTORY}/ABenchTest)
 SET(ABENCH_DEPS_DIRECTORY ${ABENCH_ROOT_DIRECTORY}/Deps)
-SET(ABENCH_GTEST_DIRECTORY ${ABENCH_ROOT_DIRECTORY}/gtest)
-SET(ABENCH_GTEST_INCLUDE_DIRECTORY ${ABENCH_GTEST_DIRECTORY}/include)
+
+# gtest dirs
+SET(ABENCH_DEPS_GTEST_DIRECTORY ${ABENCH_DEPS_DIRECTORY}/gtest)
+SET(ABENCH_DEPS_GTEST_INCLUDE_DIRECTORY ${ABENCH_DEPS_GTEST_DIRECTORY}/include)
+
+# vulkan dirs
+SET(ABENCH_DEPS_VULKAN_DIRECTORY ${ABENCH_DEPS_DIRECTORY}/vulkan)
 
 # FBX SDK dirs
 SET(ABENCH_DEPS_FBXSDK_DIRECTORY ${ABENCH_DEPS_DIRECTORY}/fbxsdk)
@@ -74,6 +79,6 @@ MESSAGE("Platform is ${BUILD_PLATFORM}")
 
 ADD_SUBDIRECTORY("ABench")
 ADD_SUBDIRECTORY("ABenchTest")
-ADD_SUBDIRECTORY("gtest")
+ADD_SUBDIRECTORY("Deps")
 
 FILE(MAKE_DIRECTORY ${ABENCH_OUTPUT_DIRECTORY})
