[Lnx] Initial Linux support
* Filled Common directory with required Linux implementation.
* Added KeyCode enum class to easily support both systems in terms
  of input support
* Renderer changes here and there to avoid uninitialized members and
  freeing errors on error situations.

--- a/ABench/CMakeLists.txt
+++ b/ABench/CMakeLists.txt
@@ -15,9 +15,14 @@ FILE(GLOB ABENCH_COMMON_LINUX_HEADERS   Common/Linux/*.hpp)
 FILE(GLOB ABENCH_RENDERER_LINUX_SOURCES Renderer/Linux/*.cpp)
 FILE(GLOB ABENCH_RENDERER_LINUX_HEADERS Renderer/Linux/*.hpp)
 
+PKG_CHECK_MODULES(ABENCH_PKG_DEPS REQUIRED
+                  xcb
+                  )
+
 INCLUDE_DIRECTORIES(${ABENCH_ROOT_DIRECTORY} ${ABENCH_DIRECTORY}
                     ${ABENCH_DEPS_FBXSDK_INCLUDE_DIRECTORY}
                     ${ABENCH_DEPS_VULKAN_DIRECTORY}
+                    ${ABENCH_PKG_DEPS_INCLUDE_DIRS}
                    )
 LINK_DIRECTORIES(${ABENCH_LIB_DIRECTORY} ${ABENCH_DEPS_FBXSDK_LIB_DIRECTORY})
 
@@ -35,7 +40,8 @@ ADD_EXECUTABLE(ABench
 
 # TODO uncomment when glslang will be added
 #TARGET_LINK_LIBRARIES(ABench glslang hlsl SPIRV OGLCompiler OSDependent)
-TARGET_LINK_LIBRARIES(ABench dl fbxsdk)
+TARGET_LINK_LIBRARIES(ABench dl fbxsdk
+                      ${ABENCH_PKG_DEPS_LIBRARIES})
 
 ADD_CUSTOM_COMMAND(TARGET ABench POST_BUILD COMMAND
                    ${CMAKE_COMMAND} -E copy $<TARGET_FILE:ABench> ${ABENCH_OUTPUT_DIRECTORY}/${targetfile})
