Introduce FS class, handle all paths with its methods
Additionally, known resource directories (Data/...) were gathered
into one ResourceDir module for easy access through the project.

--- a/ABench/ABench.vcxproj.filters
+++ b/ABench/ABench.vcxproj.filters
@@ -125,6 +125,10 @@
     <ClCompile Include="Renderer\DescriptorLayoutManager.cpp">
       <Filter>Renderer</Filter>
     </ClCompile>
+    <ClCompile Include="Common\Win\FS.cpp">
+      <Filter>Common\Win</Filter>
+    </ClCompile>
+    <ClCompile Include="ResourceDir.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common\Window.hpp">
@@ -237,5 +241,9 @@
     <ClInclude Include="Renderer\DescriptorLayoutManager.hpp">
       <Filter>Renderer</Filter>
     </ClInclude>
+    <ClInclude Include="Common\FS.hpp">
+      <Filter>Common</Filter>
+    </ClInclude>
+    <ClInclude Include="ResourceDir.hpp" />
   </ItemGroup>
 </Project>
