--- a/ABench/ABench.vcxproj
+++ b/ABench/ABench.vcxproj
@@ -180,6 +180,7 @@ copy /B $(SolutionDir)Deps\freeimage\Dist\$(PlatformTarget)\FreeImage.dll $(Targ
     <ClCompile Include="Common\FBXFile.cpp" />
     <ClCompile Include="Common\Image.cpp" />
     <ClCompile Include="Common\Win\Common.cpp" />
+    <ClCompile Include="Common\Win\FS.cpp" />
     <ClCompile Include="Common\Win\Library.cpp" />
     <ClCompile Include="Common\Win\Logger.cpp" />
     <ClCompile Include="Common\Win\Timer.cpp" />
@@ -303,6 +304,7 @@ copy /B $(SolutionDir)Deps\freeimage\Dist\$(PlatformTarget)\FreeImage.dll $(Targ
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|x64'">PCH.hpp</PrecompiledHeaderFile>
     </ClCompile>
     <ClCompile Include="Renderer\Win\WinBackbuffer.cpp" />
+    <ClCompile Include="ResourceDir.cpp" />
     <ClCompile Include="Scene\Camera.cpp">
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">PCH.hpp</PrecompiledHeaderFile>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">PCH.hpp</PrecompiledHeaderFile>
@@ -326,6 +328,7 @@ copy /B $(SolutionDir)Deps\freeimage\Dist\$(PlatformTarget)\FreeImage.dll $(Targ
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common\FBXFile.hpp" />
+    <ClInclude Include="Common\FS.hpp" />
     <ClInclude Include="Common\Image.hpp" />
     <ClInclude Include="Common\Library.hpp" />
     <ClInclude Include="Common\Logger.hpp" />
@@ -357,6 +360,7 @@ copy /B $(SolutionDir)Deps\freeimage\Dist\$(PlatformTarget)\FreeImage.dll $(Targ
     <ClInclude Include="Renderer\Util.hpp" />
     <ClInclude Include="Renderer\VertexLayout.hpp" />
     <ClInclude Include="Renderer\Win\WinBackbuffer.hpp" />
+    <ClInclude Include="ResourceDir.hpp" />
     <ClInclude Include="Scene\Camera.hpp" />
     <ClInclude Include="Scene\Component.hpp" />
     <ClInclude Include="Scene\Material.hpp" />
