Introduce Light class
Simple lighting (one light only) is implemented in fragment shader,
using position and intensity from Light object.

Additionally, Transform is now calculated each time an update is needed
(so every SetPosition/Scale call).

--- a/ABench/ABench.vcxproj
+++ b/ABench/ABench.vcxproj
@@ -311,6 +311,7 @@ copy /B $(SolutionDir)Deps\freeimage\Dist\$(PlatformTarget)\FreeImage.dll $(Targ
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">PCH.hpp</PrecompiledHeaderFile>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|x64'">PCH.hpp</PrecompiledHeaderFile>
     </ClCompile>
+    <ClCompile Include="Scene\Light.cpp" />
     <ClCompile Include="Scene\Material.cpp" />
     <ClCompile Include="Scene\Mesh.cpp">
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">PCH.hpp</PrecompiledHeaderFile>
@@ -363,6 +364,7 @@ copy /B $(SolutionDir)Deps\freeimage\Dist\$(PlatformTarget)\FreeImage.dll $(Targ
     <ClInclude Include="ResourceDir.hpp" />
     <ClInclude Include="Scene\Camera.hpp" />
     <ClInclude Include="Scene\Component.hpp" />
+    <ClInclude Include="Scene\Light.hpp" />
     <ClInclude Include="Scene\Material.hpp" />
     <ClInclude Include="Scene\Mesh.hpp" />
     <ClInclude Include="Scene\Object.hpp" />
